--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -635,11 +635,10 @@ body {
 }
 
 /**社交菜单微信 */
-a[rel="weixin"] {
+a[rel~="weixin"] {
   position: relative;
 }
-
-a[rel="weixin"]::after {
+a[rel~="weixin"]::after {
   content: "";
   position: absolute;
   right: -2.5rem;
@@ -647,7 +646,7 @@ a[rel="weixin"]::after {
   z-index: 99;
   width: 128px;
   height: 128px;
-  background-size: 120px 120px;
+  background-size: cover; /* 或 contain */
   border: 4px solid #0095ba;
   transform-origin: top right;
   transform: scale(0);
@@ -655,7 +654,7 @@ a[rel="weixin"]::after {
   transition: all 0.4s ease-in-out;
 }
 
-a[rel="weixin"]:hover::after {
+a[rel~="weixin"]:hover::after {
   transform: scale(1);
   opacity: 1;
 }
@@ -1918,13 +1917,3 @@ Media
     height: 2px;
   }
 }
-
-/* body {
-  opacity: 0;
-  -webkit-transition: opacity 0.5s ease-in-out; /* Safari */
-  transition: opacity 0.5s ease-in-out;
-}
-
-body.fadeInOut {
-  opacity: 1;
-} */
